src/snapshots/avdl__reader__tests__parse_error_map_empty_type_parameter.snap
---
source: src/reader.rs
expression: render_diagnostic(&err)
---
  x line 3:8 `map` type requires a type parameter
   ,-[<input>:3:5]
 2 |   record Foo {
 3 |     map<> data;
   :     ^^|^^
   :       `-- missing type inside `<>`
 4 |   }
   `----
  help: specify the value type, e.g., `map<string>`
