src/snapshots/avdl__reader__tests__parse_error_missing_enum_name.snap
---
source: src/reader.rs
expression: render_diagnostic(&err)
---
  x line 2:7 expected name after `enum`, found `{`
   ,-[<input>:2:8]
 1 | protocol Test {
 2 |   enum {
   :        |
   :        `-- expected enum name before `{`
 3 |     RED, GREEN, BLUE
   `----
  help: add a name, e.g., `enum MyEnum { ... }`
