src/snapshots/avdl__reader__tests__parse_error_missing_record_brace_before_record.snap
---
source: src/reader.rs
expression: render_diagnostic(&err)
---
  x line 6:13 missing closing `}` for record
   ,-[<input>:2:14]
 1 | protocol Test {
 2 |   record Foo {
   :              |
   :              `-- this record is never closed
 3 |     string name;
   `----
  help: add a closing `}` before the next type declaration
