src/snapshots/avdl__reader__tests__parse_error_missing_semicolon_no_jargon.snap
---
source: src/reader.rs
expression: rendered
---
  x line 4:4 unexpected 'int' expected ';' or ','
   ,-[<input>:4:5]
 3 |     string name
 4 |     int age;
   :     ^|^
   :      `-- line 4:4 unexpected 'int' expected ';' or ','
 5 |   }
   `----
