src/snapshots/avdl__reader__tests__parse_error_misspelled_protocol_at_top_level.snap
---
source: src/reader.rs
expression: render_diagnostic(&err)
---
  x line 1:0 unexpected token `protocl` -- did you mean `protocol`?
   ,-[<input>:1:1]
 1 | protocl Test {
   : ^^^|^^^
   :    `-- did you mean `protocol`?
 2 |   record Foo {
   `----
  help: expected one of: protocol, namespace, import, schema, enum, fixed, error, record, @
