src/snapshots/avdl__reader__tests__parse_error_trailing_comma_in_enum.snap
---
source: src/reader.rs
expression: render_diagnostic(&err)
---
  x line 6:2 trailing comma is not allowed in enum declaration
   ,-[<input>:5:9]
 4 |     GREEN,
 5 |     BLUE,
   :         |
   :         `-- trailing comma
 6 |   }
   `----
  help: remove the comma after `BLUE`
