src/snapshots/avdl__reader__tests__parse_error_unclosed_protocol_brace.snap
---
source: src/reader.rs
expression: render_diagnostic(&err)
---
  x line 5:0 unexpected end of file -- missing closing `}` for protocol
   ,-[<input>:1:15]
 1 | protocol Test {
   :               |
   :               `-- this protocol is never closed
 2 |   record User {
   `----
  help: add a closing `}` to match this opening brace
